--- a/src/global.css
+++ b/src/global.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-3xl;
+    @apply font-sans;
+  }
+  h2 {
+    @apply text-2xl;
+    @apply font-sans;
+  }
+  h3 {
+    @apply text-xl;
+    @apply font-sans;
+  }
+}
+
