--- a/src/global.css
+++ b/src/global.css
@@ -100,6 +100,19 @@
     @apply -m-3;
   }
 
+  .gatsby-code-title + .gatsby-highlight {
+    margin-top: -0.5rem !important;
+  }
+
+
+  .gatsby-code-title {
+    @apply rounded-t-md;
+    @apply text-white;
+    @apply bg-black;
+    @apply font-mono;
+    @apply p-3;
+  }
+
   /* Markdown title permalinks */
  .header-anchor {
    @apply invisible;
