--- a/src/global.css
+++ b/src/global.css
@@ -12,7 +12,12 @@
   small,
   li,
   summary,
-  h1,h2,h3,h4,h5,h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply dark:text-light_white;
   }
 
